action2,3可执行,action5注入服务
action5把项目分为前端和后端，分别扫描包并注入

--- a/action5/web/WEB-INF/web.xml
+++ b/action5/web/WEB-INF/web.xml
@@ -3,27 +3,32 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+    
     <context-param>
         <param-name>log4jConfigLocation</param-name>
-        <param-value>/WEB-INF/classes/log4j.web.properties</param-value>
+        <param-value>/WEB-INF/log4j.xml</param-value>
     </context-param>
 
     <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
-    <!--配置flow路径-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>/WEB-INF/applicationContext.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
     <servlet>
-        <servlet-name>action4</servlet-name>
+        <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
-        <init-param>
-            <param-name>contextConfigLocation</param-name>
-            <param-value>/config/action4-servlet.xml</param-value>
-        </init-param>
     </servlet>
     <servlet-mapping>
-        <servlet-name>action4</servlet-name>
-        <url-pattern>/flow/*</url-pattern>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 
 </web-app>
